# proctrace

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  astro.config.mjs  demo_script.sh  make_demo.sh
.flox/: env.json
.flox/env/: manifest.toml
assets/: proctrace.bt
docs/: astro.config.mjs  mermaid.md  package-lock.json  package.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: getting-started.md  known-issues.md  raw-recordings.md
docs/src/content/docs/reference/: proctrace-ingest.md  proctrace-record.md  proctrace-render.md  proctrace-sort.md  proctrace.md
proctrace/: Cargo.toml
proctrace/assets/: proctrace.bt
proctrace/src/: cli.rs  ingest.rs  lib.rs  main.rs  models.rs  record.rs  render.rs  writers.rs
src/: cli.rs  ingest.rs  main.rs  models.rs  record.rs  render.rs  utils.rs  writers.rs
xtask/: Cargo.toml
xtask/src/: main.rs
