[package]
name = "proctrace"
version = "0.1.0"
edition = "2021"

[lib]
name = "proctrace"
path = "src/lib.rs"

[[bin]]
name = "proctrace"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_derive.workspace = true
nix.workspace = true
regex-lite.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
procfs.workspace = true
shellish_parse.workspace = true
signal-hook.workspace = true
